# VideoDownFlask

./: main.py  pyproject.toml
static/css/: download.css  index.css  main.css  video.css
static/js/: download.js  index.js  video.js
templates/: base.html  download.html  index.html  video.html
